crates/swc/tests/tsc-references/privateStaticMemberAccessibility_es2015.1.normal.js
class Base {
}
class Derived extends Base {
    constructor(...args){
        super(...args);
        this.bing = ()=>Base.foo // error
        ;
    }
}
Derived.bar = Base.foo // error
;
